fix(ds): use word spacing normal for h2

--- a/projects/client/src/style/typography/index.css
+++ b/projects/client/src/style/typography/index.css
@@ -10,9 +10,12 @@ span.display-title {
   padding: 0;
 }
 
-h1,
-h2 {
+h1 {
   word-spacing: var(--ni-4);
+}
+
+h2 {
+  word-spacing: normal;
 }
 
 h3,
